--- a/www/index.html
+++ b/www/index.html
@@ -1,20 +1,28 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script>
-    $(function() {
-        var socket = io();
-        $('form').submit(function() {
-            socket.emit('chat message', $('#m').val());
-            $('#m').val('');
-            return false;
-        });
-
-        socket.on('chat message', function(msg) {
-            $('#messages').append($('<li>').text(msg));
-        });
+  $(function() {
+    var socket = io();
+    $('form').submit(function() {
+        socket.emit('chat message', $('#m').val());
+        $('#m').val('');
+        return false;
     });
+
+    socket.emit('get messages');
+    socket.on('get messages', function(msgs) {
+        console.table(msgs);
+        for (i = 0; i < msgs.length; i++) {
+          $('#messages').append($('<li>').text(msgs[i].mensagem_text));
+        }
+    });
+
+    socket.on('chat message', function(msg) {
+        $('#messages').append($('<li>').text(msg));
+    });
+});
 </script>
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Socket.IO chat</title>
